+ Improved: Block type validation and fixed resulting error